--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 click==7.1.2
 Flask==1.1.2
+Flask-Uploads==0.2.1
+Flask-WTF==0.14.3
 itsdangerous==1.1.0
 Jinja2==2.11.2
+livereload==2.6.3
 MarkupSafe==1.1.1
+PyPDF2==1.26.0
+six==1.15.0
+tornado==6.0.4
 Werkzeug==1.0.1
+WTForms==2.3.3
+
